--- a/angular17-main/src/app/footer/footer.component.html
+++ b/angular17-main/src/app/footer/footer.component.html
@@ -65,8 +65,10 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0,
     0.05);">
-    © 2024 Copyright:
-    <p class="text-body">XPO Marketing</p>
+    © 2024 Copyright: <p class="text-body">XPO Marketing</p>
     </div>
     <!-- Copyright -->
     </footer>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
