--- a/angular17-main/src/app/app.component.html
+++ b/angular17-main/src/app/app.component.html
@@ -14,10 +14,9 @@
             <a class="nav-link" href="crear/servicios">Crear Servicios</a>
           </li>
 
-          <li>
-            <a class="nav-link btn btn-outline-primary" routerLink="carrito">Carrito</a>
-
-          </li>
+          <a class="nav-link btn btn-outline-primary" routerLink="/carrito">
+            <i class="bi bi-cart"></i> Carrito
+          </a>
         </ul>
 
 
