--- a/angular17-main/src/app/servicio/servicio.component.html
+++ b/angular17-main/src/app/servicio/servicio.component.html
@@ -1,100 +1,71 @@
-
-
-
-  <div class="row " >
-    <div class="col-md-12">
-      <div class="container">
-        <div class="row  mb-3 border-top mt-5 ">
-
+<div class="row">
+  <div class="col-md-12">
+    <div class="container">
+      <div class="row mb-3 border-top mt-5">
+        <div class="col-md-4 mb-3">
+          <img [src]="servicio.imagen ? 'http://127.0.0.1:8000/' + servicio.imagen : 'https://via.placeholder.com/300'" class="card-img-top" alt="Imagen del servicio">
+        </div>
+        <div class="col-md-8">
+          <h3 class="display-1 my-4">{{ servicio.nombre }}</h3>
+          <p>Descripción: {{ servicio.descripcion }}</p>
+          <h4>{{ servicio.precio }}€</h4>
           
-          <div class="col-md-4 mb-3">
-
-            <img [src]="servicio.imagen ? 'http://127.0.0.1:8000/' + servicio.imagen : 'https://via.placeholder.com/300'" class="card-img-top" alt="Imagen del servicio">
+          <!-- Media de las puntuaciones -->
+          <div *ngIf="mediaPuntuacion !== undefined" class="my-4">
+            <h2>Media de Puntuaciones:</h2>
+            <h1>{{ mediaPuntuacion.toFixed(2) }}</h1> <!-- Mostrar la media con dos decimales -->
           </div>
-          <div class="col-md-8">  
-            <h3 class="display-1 my-4">{{ servicio.nombre }}</h3>
-            <p>descripcion: {{ servicio.descripcion }}</p>
-            
-
-            <h4>{{ servicio.precio }}€</h4>
-
-            <a *ngIf="usuario.rol===1" class="btn btn-secondary m-2" href="editar/servicio/{{servicio.id}}">Editar</a>
-            <a *ngIf="usuario.rol===1" href="#" class="btn btn-danger m-2" (click)="eliminarProducto(servicio.id)">Eliminar</a>
-            <a class="btn btn-secondary m-2" (click)="agregarCarrito(servicio.id)">Añadir al carrito</a>
-            <a href="lista/servicios" class="btn btn-primary bg-dark m-2">Volver</a>
-            <button class="btn btn-secondary m-2" (click)="toggleFormulario()">Crear Comentario</button>
-            
-          </div>
-
-
           
-          <div class="form-container sign-up container">
-            <form (ngSubmit)="reseniaCreate(servicio.id, usuario.id)">
-              
-
-              <div *ngIf="mostrarFormulario">
-                <div class="form-group">
-                  <label class="form-label" for="comentario">Comentario</label>
-                  <textarea class="form-control" id="comentario" name="comentario" [(ngModel)]="comentario" rows="4"></textarea>
-                </div>
-                
-                <div class="form-group">
-                  <label class="form-label" for="puntuacion">Puntuación</label>
-                  <input class="form-control" id="puntuacion" name="puntuacion" [(ngModel)]="puntuacion" type="number" min="0" max="5">
-                </div>
-                
-                <div class="mt-3">
-                  <button type="submit" class="btn btn-primary">Enviar</button>
-
-                </div>
-              </div>
-              
-            </form>
+          <a *ngIf="usuario.rol === 1" class="btn btn-secondary m-2" href="editar/servicio/{{servicio.id}}">Editar</a>
+          <a *ngIf="usuario.rol === 1" href="#" class="btn btn-danger m-2" (click)="eliminarProducto(servicio.id)">Eliminar</a>
+          <a class="btn btn-secondary m-2" (click)="agregarCarrito(servicio.id)">Añadir al carrito</a>
+          <a href="lista/servicios" class="btn btn-primary bg-dark m-2">Volver</a>
+          <button class="btn btn-secondary m-2" (click)="toggleFormulario()">Crear Comentario</button>
         </div>
 
-
+        <div class="form-container sign-up container">
+          <form (ngSubmit)="reseniaCreate(servicio.id, usuario.id)">
+            <div *ngIf="mostrarFormulario">
+              <div class="form-group">
+                <label class="form-label" for="comentario">Comentario</label>
+                <textarea class="form-control" id="comentario" name="comentario" [(ngModel)]="comentario" rows="4"></textarea>
+              </div>
+              <div class="form-group">
+                <label class="form-label" for="puntuacion">Puntuación</label>
+                <input class="form-control" id="puntuacion" name="puntuacion" [(ngModel)]="puntuacion" type="number" min="0" max="5">
+              </div>
+              <div class="mt-3">
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
+    </div>
 
-      <div class="container col-md-12">
-        <h3 class="accordion-header border-bottom" data-bs-toggle="collapse" data-bs-target="#commentsCollapse" aria-expanded="false"
-          aria-controls="commentsCollapse">
-          Comentarios 
-        </h3>
-        <div id="commentsCollapse" class="accordion-collapse collapse" aria-labelledby="commentsHeading"
-          data-bs-parent="#accordionExample">
-          <div class="row mb-5 mt-5">
-            <div class="col-md-12">
-              <div class="row"  *ngIf="servicio.resenias">
-                <div class="flex" *ngFor="let resenia of servicio.resenias; let i = index">
-                  <strong>{{ resenia.usuario.username }}</strong>
-                  <p>Comentario: {{ resenia.comentario }}</p>
-                  <p>Puntuacion: {{ resenia.puntuacion }}</p>
-                  <div *ngIf="resenia.usuario.username === obtenerUsername()">
-                    <a class="btn btn-secondary m-2" href="editar/resenia/{{resenia.id}}">Editar</a>
-                    <a class="btn btn-danger m-2" (click)="eliminarResenia(resenia.id)">Eliminar</a>
-                    
-
-                  </div>
-                  
-                  
-                  <div *ngIf="mostrarFormulario">
-                    <app-editar-resenia></app-editar-resenia>
-                  </div>
-
-
-                  <hr>
+    <div class="container col-md-12">
+      <h3 class="accordion-header border-bottom" data-bs-toggle="collapse" data-bs-target="#commentsCollapse" aria-expanded="false" aria-controls="commentsCollapse">
+        Comentarios 
+      </h3>
+      <div id="commentsCollapse" class="accordion-collapse collapse" aria-labelledby="commentsHeading" data-bs-parent="#accordionExample">
+        <div class="row mb-5 mt-5">
+          <div class="col-md-12">
+            <div class="row" *ngIf="servicio.resenias">
+              <div class="flex" *ngFor="let resenia of servicio.resenias; let i = index">
+                <strong>{{ resenia.usuario.username }}</strong>
+                <p>Comentario: {{ resenia.comentario }}</p>
+                <p>Puntuacion: {{ resenia.puntuacion }}</p>
+                <div *ngIf="resenia.usuario.username === obtenerUsername()">
+                  <a class="btn btn-secondary m-2" href="editar/resenia/{{resenia.id}}">Editar</a>
+                  <a class="btn btn-danger m-2" (click)="eliminarResenia(resenia.id)">Eliminar</a>
                 </div>
+                <hr>
               </div>
-              <!-- <div *ngElse>
-                <p>Lo sentimos, no hay comentarios</p>
-              </div> -->
             </div>
           </div>
         </div>
-
       </div>
-      
     </div>
   </div>
-
+</div>
+  
