pago paypal cheeeeck

--- a/angular17-main/src/app/carrito/carrito.component.html
+++ b/angular17-main/src/app/carrito/carrito.component.html
@@ -24,10 +24,11 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-12">
+  <div class="row ">
+    <div class="col-12 ">
       <h3>Total Carrito: {{ pedido.total }}€</h3>  
-      <a class="btn btn-danger m-2" (click)="pagarPedido(pedido.id)">Realizar Pago</a>
+      <div id="paypal-button-container"></div>
+
         
     </div>
   </div>
