--- a/angular17-main/src/app/carrito/carrito.component.html
+++ b/angular17-main/src/app/carrito/carrito.component.html
@@ -27,7 +27,7 @@
   <div class="row ">
     <div class="col-12 ">
       <h3>Total Carrito: {{ pedido.total }}€</h3>  
-      <div id="paypal-button-container"></div>
+      <div id="paypal-button-container" class="container d-flex justify-content-center align-items-center"></div>
 
         
     </div>
