--- a/angular17-main/src/app/footer/footer.component.html
+++ b/angular17-main/src/app/footer/footer.component.html
@@ -16,27 +16,19 @@
     <a
     data-mdb-ripple-init
     class="btn text-white btn-floating m-1"
-    style="background-color: #55acee;"
+    style="background-color: #272727;"
     href="#!"
     role="button"
-    ><i class="fab fa-twitter"></i
+    ><i class="fab fa-tiktok"></i
     ></a>
     <!-- Google -->
-    <a
-    data-mdb-ripple-init
-    class="btn text-white btn-floating m-1"
-    style="background-color: #dd4b39;"
     
-    href="#!"
-    role="button"
-    ><i class="fab fa-google"></i
-    ></a>
     <!-- Instagram -->
     <a
     data-mdb-ripple-init
     class="btn text-white btn-floating m-1"
     style="background-color: #ac2bac;"
-    href="https://www.instagram.com/digitalsouth_/"
+    href="https://www.instagram.com/_digitalsouth_/"
     role="button"
     ><i class="fab fa-instagram"></i
     ></a>
@@ -45,19 +37,12 @@
     data-mdb-ripple-init
     class="btn text-white btn-floating m-1"
     style="background-color: #0082ca;"
-    href="www.linkedin.com/in/digital-south-479228307"
+    href="https://www.linkedin.com/in/digital-south-479228307/"
     role="button"
     ><i class="fab fa-linkedin-in"></i
     ></a>
     <!-- Github -->
-    <a
-    data-mdb-ripple-init
-    class="btn text-white btn-floating m-1"
-    style="background-color: #333333;"
-    href="#!"
-    role="button"
-    ><i class="fab fa-github"></i
-    ></a>
+   
     </section>
     <!-- Section: Social media -->
     </div>
