--- a/angular17-main/src/app/home/home.component.html
+++ b/angular17-main/src/app/home/home.component.html
@@ -1,20 +1,69 @@
-<div class="container text-center">
-  <img src="./assets/Post_Dossier.png" alt="">
+<div class="container-fluid bg-image">
+    <div class="container">
+        <h1 class="display-1 my-4 text-center">Digital South</h1>
+        <h1 class="display-8 my-4 text-center">UN DEPARTAMENTO DE MARKETING AL ALCANCE DE TODOS</h1>
+        <h4 class="text-center">Somos <strong>Digital South</strong>, una empresa con una amplia experiencia y conocimiento en marketing digital</h4>
+        <hr>  
+    </div>
 </div>
 
-
 <div class="container">
-    <h1 class="display-4 text-center my-4">SOBRE NOSOTROS..</h1>
+    <div class="container p-4 rounded formato">
+        <div class="row">
+            <!-- Columna para la lista de servicios -->
+            <h2 class="text-center">¿Qué ofrecemos?</h2>
+            <hr>
+            <div class="col-md-8">
+                <br>
+                <br>
+                <br>
+                <br>
+                
+                <ul>
+                    <li>Estrategia digital</li>
+                    <li>Gestión RRSS</li>
+                    <li>Diseño web</li>
+                    <li>SEO, SEM</li>
+                </ul>
+                <p>Diseñados para satisfacer las necesidades específicas de su empresa y alcanzar sus objetivos comerciales.</p>
+            </div>
+            <!-- Columna para la imagen -->
+            <div class="col-md-4">
+                <img src="../../assets/marketing-digital.png" alt="Imagen" class="img-fluid rounded">
+            </div>
+        </div>
+        <hr>
+
+        <h2>Nuestro objetivo</h2>
+        <p>Ayudarle a alcanzar sus metas y objetivos comerciales</p>
+        <p>Estamos comprometidos a brindarle un servicio excepcional, resultados tangibles y una colaboración sólida y duradera</p>
+
+        <hr>
+
+        <h2>Departamentos disponibles</h2>
+        <ul>
+            <li>Departamento de estrategia</li>
+            <ul class="department">
+                <li>Encargado de desarrollar estrategias de marketing digital personalizadas para cada nuevo cliente.</li>
+            </ul>
+            <li>Departamento de Diseño y Desarrollo</li>
+            <ul class="department">
+                <li>Responsable de crear sitios web atractivos y funcionales.</li>
+            </ul>
+            <li>Departamento de SEO y SEM</li>
+            <ul class="department">
+                <li>Se enfoca en mejorar la visibilidad y el posicionamiento en línea de nuestros clientes.</li>
+            </ul>
+            <li>Departamento de Redes Sociales</li>
+            <ul class="department">
+                <li>Encargado de gestionar y optimizar la presencia en redes sociales de nuestros clientes.</li>
+            </ul>
+        </ul>
+
+        <hr>
+
+        <h2>¿Necesitas información?</h2>
+        <p>No dude en ponerse en contacto con nosotros para programar una consulta o discutir cómo podemos ayudarle a hacer crecer su empresa</p>
+        <p>Estamos ansiosos por la posibilidad de colaborar con usted y esperamos poder ser parte de su éxito</p>
+    </div>
 </div>
-
-<div class="container">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, et quo dolore iusto, earum, voluptatibus rem itaque sed numquam tempore reprehenderit? Obcaecati laborum qui reiciendis nobis perferendis, architecto eum nisi.</p>
-  </div>
-  
-     
-  
-  
-
-
-
-  
