--- a/angular17-main/src/styles.css
+++ b/angular17-main/src/styles.css
@@ -1,4 +1,6 @@
 body {
-    background-color: #F2FFE9!important;
-    color: #2E8B57!important;
+    background-color: #FFF7D4!important;
+    font-family: Helvetica, Sans-Serif!important;
+
+    color: #4C3D3D!important;
 }
