--- a/angular17-main/src/app/carrito/carrito.component.html
+++ b/angular17-main/src/app/carrito/carrito.component.html
@@ -1,37 +1,38 @@
 <div class="container mt-5">
   <div class="row">
-    <h1>Carrito</h1>
-    {{pedido.id}}
-    <div class="card mb-3" *ngFor="let servicio of servicios">
-      <div class="row g-0">
-
-        <div class="col-md-2 d-flex align-items-center justify-content-end">
-          <div class="rounded overflow-hidden border border-dark">
-            <img [src]="servicio.imagen ? 'http://127.0.0.1:8000/' + servicio.imagen : 'https://via.placeholder.com/300'" class="card-img-top" alt="Imagen del servicio">
+    <!-- Verificar si el carrito está vacío -->
+    <ng-container *ngIf="servicios.length === 0; else carritoNoVacio">
+      <h1 class="text-center">El carrito está vacío</h1>
+    </ng-container>
+    <ng-template #carritoNoVacio>
+      <h1>Carrito</h1>
+      {{pedido.id}}
+      <div class="card mb-3" *ngFor="let servicio of servicios">
+        <div class="row g-0">
+          <div class="col-md-2 d-flex align-items-center justify-content-end">
+            <div class="rounded overflow-hidden border border-dark">
+              <img [src]="servicio.imagen ? 'http://127.0.0.1:8000/' + servicio.imagen : 'https://via.placeholder.com/300'" class="card-img-top" alt="Imagen del servicio">
+            </div>
           </div>
-        </div>
-
-        <div class="col-md-10">
-          <div class="card-body">
-            <h5 class="card-title">{{ servicio.nombre_servicio }}</h5>
-            <p class="card-text"><strong>Cantidad:</strong> {{ servicio.cantidad }}</p>
-            <p class="card-text"><strong>Precio:</strong> {{ servicio.precio }}</p>
-            <p class="card-text"><strong>Total:</strong> {{ servicio.total }}</p>eliminarDelCarrito
-            <a class="btn btn-danger m-2" (click)="eliminarDelCarrito(servicio.servicio_id)">Eliminar del carrito</a>
-
+          <div class="col-md-10">
+            <div class="card-body">
+              <h5 class="card-title">{{ servicio.nombre_servicio }}</h5>
+              <p class="card-text"><strong>Cantidad:</strong> {{ servicio.cantidad }}</p>
+              <p class="card-text"><strong>Precio:</strong> {{ servicio.precio }}</p>
+              <p class="card-text"><strong>Total:</strong> {{ servicio.total }}</p>
+              <a class="btn btn-danger m-2" (click)="eliminarDelCarrito(servicio.servicio_id)">Eliminar del carrito</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row ">
-    <div class="col-12 ">
-      <h3>Total Carrito: {{ pedido.total }}€</h3>  
-      <div id="paypal-button-container" class="container d-flex justify-content-center align-items-center"></div>
-
-        
-    </div>
+      <div class="row">
+        <div class="col-12">
+          <h3>Total Carrito: {{ pedido.total }}€</h3>  
+          
+        </div>
+      </div>
+    </ng-template>
+    <div id="paypal-button-container"></div>
   </div>
 </div>
 
-    
