--- a/angular17-main/src/app/footer/footer.component.scss
+++ b/angular17-main/src/app/footer/footer.component.scss
@@ -2,7 +2,9 @@ footer {
 
     position: relative;
     bottom: 0;
-    width: 100%;
+    margin: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
     
 
   
