--- a/angular17-main/src/app/lista-servicios/lista-servicios.component.html
+++ b/angular17-main/src/app/lista-servicios/lista-servicios.component.html
@@ -1,31 +1,36 @@
-@if(loading){
-<div  class="spinner-border" role="status">
-  <span class="visually-hidden">Loading...</span>
-</div>
-}
-
-
-  <div class="container mt-5">
-    <h1>Lista Servicios</h1>
-
-
-    <div class="row">
-      <div class="col-lg-4 mb-4" *ngFor="let servicio of servicios; let i = index">
-        <div class="card ">
-
-          <img [src]="servicio.imagen ? 'http://127.0.0.1:8000/' + servicio.imagen : 'https://via.placeholder.com/300'" class="card-img-top" alt="Imagen del servicio">
-          <div class="card-body">
-            <h5 class="card-title">{{ servicio.nombre }}</h5>
-            <p class="card-text">{{ servicio.descripcion }}</p>
-            <p class="card-text">Precio: {{ servicio.precio }}</p>
-            <a href="servicio/{{servicio.id}}" class="btn btn-primary">Ver más</a>
-            {{servicio.imagen}}
-            
-          </div>
-        </div>
-        
-      </div>  
+<div class="container mt-5">
+  <h1>Servicios Disponibles</h1>
+  
+  <div class="row mb-4">
+    <div class="col-md-6">
+      <input type="text" class="form-control" placeholder="Buscar servicio" [(ngModel)]="searchTerm" (input)="filterAndSortServicios()">
+    </div>
+    <div class="col-md-6">
+      <select class="form-control" [(ngModel)]="sortOrder" (change)="filterAndSortServicios()">
+        <option value="default">Ordenar por</option>
+        <option value="asc">Precio: Menor a Mayor</option>
+        <option value="desc">Precio: Mayor a Menor</option>
+        <option value="az">Nombre: A-Z</option>
+        <option value="za">Nombre: Z-A</option>
+      </select>
     </div>
   </div>
-
   
+  <div *ngIf="loading" class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  
+  <div *ngIf="!loading" class="row">
+    <div class="col-lg-4 mb-4" *ngFor="let servicio of filteredServicios; let i = index">
+      <div class="card">
+        <img [src]="servicio.imagen ? 'http://127.0.0.1:8000/' + servicio.imagen : 'https://via.placeholder.com/300'" class="card-img-top" alt="Imagen del servicio">
+        <div class="card-body">
+          <h3 class="card-title">{{ servicio.nombre }}</h3>
+          <p class="card-text">{{ servicio.descripcion }}</p>
+          <h2 class="card-text"> {{ servicio.precio }} €</h2>
+          <a href="servicio/{{servicio.id}}" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
