--- a/angular17-main/src/app/pago/pago.component.scss
+++ b/angular17-main/src/app/pago/pago.component.scss
@@ -65,62 +65,61 @@ body {
   
 /* boton */
 
-  .Download-button {
-    display: flex;
-    align-items: center;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 17px;
-    padding: 12px 20px;
-    color: white;
-    background: rgb(103, 92, 156);
-    border: none;
-    box-shadow: 0 0.7em 1.5em -0.5em rgba(59, 48, 78, 0.527);
-    letter-spacing: 0.05em;
-    border-radius: 8px;
-    cursor: pointer;
-    position: relative;
-  }
-  
-  .Download-button svg {
-    margin-right: 8px;
-    width: 25px;
-  }
-  
-  .Download-button:hover {
-    box-shadow: 0 0.5em 1.5em -0.5em rgba(88, 71, 116, 0.627);
-  }
-  
-  .Download-button:active {
-    box-shadow: 0 0.3em 1em -0.5em rgba(88, 71, 116, 0.627);
-  }
-  
-  .Download-button::before {
-    content: "";
-    width: 4px;
-    height: 40%;
-    background-color: white;
-    position: absolute;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    left: 0;
-    transition: all 0.2s;
-  }
-  
-  .Download-button::after {
-    content: "";
-    width: 4px;
-    height: 40%;
-    background-color: white;
-    position: absolute;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    right: 0;
-    transition: all 0.2s;
-  }
-  
-  .Download-button:hover::before,
-  .Download-button:hover::after {
-    height: 60%;
-  }
-  
+.button {
+  position: relative;
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 1px solid #17795E;
+  background-color: #209978;
+  overflow: hidden;
+}
+
+.button, .button__icon, .button__text {
+  transition: all 0.3s;
+}
+
+.button .button__text {
+  transform: translateX(22px);
+  color: #fff;
+  font-weight: 600;
+}
+
+.button .button__icon {
+  position: absolute;
+  transform: translateX(109px);
+  height: 100%;
+  width: 39px;
+  background-color: #17795E;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button .svg {
+  width: 20px;
+  fill: #fff;
+}
+
+.button:hover {
+  background: #17795E;
+}
+
+.button:hover .button__text {
+  color: transparent;
+}
+
+.button:hover .button__icon {
+  width: 148px;
+  transform: translateX(0);
+}
+
+.button:active .button__icon {
+  background-color: #146c54;
+}
+
+.button:active {
+  border: 1px solid #146c54;
+} 
