--- a/angular17-main/src/app/registro/registro.component.html
+++ b/angular17-main/src/app/registro/registro.component.html
@@ -17,8 +17,10 @@
             <label class="form-label" for="password2">Confirmar contraseña</label>
             <input class="form-control" id="password2" name="password2" type="password" [(ngModel)]="contrasenia2" />
         </div>
-        <div class="mt-3">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+        <div class="mt-3 d-flex justify-content-center align-items-center">
+            <button class="boton-gen" type="submit">
+                <span>Enviar</span>
+            </button>
         </div>
         <div>
             <p>¿Ya estás registrado? <a routerLink="/login">Inicia Sesión</a></p>
