--- a/angular17-main/src/app/pedido-pagado-revisar/pedido-pagado-revisar.component.html
+++ b/angular17-main/src/app/pedido-pagado-revisar/pedido-pagado-revisar.component.html
@@ -88,11 +88,11 @@
                         <td>{{ detalle.servicio.descripcion }}</td>
                         <td class="text-center">{{ detalle.servicio.precio }}</td>
                         <td class="text-center">{{ detalle.cantidad }}</td>
-                        <td class="text-right">{{ detalle.servicio.precio * detalle.cantidad }}</td>
+                        <td class="text-right">{{ detalle.servicio.precio * detalle.cantidad }} €</td>
                       </tr>
                       <tr>
                         <td colspan="5" class="text-right"><strong>Total</strong></td>
-                        <td class="text-right"><strong>{{ total }}</strong></td>
+                        <td class="text-right"><strong>{{ total }} €</strong></td>
                       </tr>
                     </tbody>
                   </table>
