--- a/angular17-main/src/app/servicio/servicio.component.html
+++ b/angular17-main/src/app/servicio/servicio.component.html
@@ -62,7 +62,7 @@
 
             <button type="submit" (click)="toggleFormulario()" class="btn  btn-dark-gray">Crear Comentario</button>
 
-            <button  (click)="toggleFormulario()" class="btn  btn-dark-gray">Volver</button>
+            <button  (click)="volver()" class="btn  btn-dark-gray">Volver</button>
             
             
 
