--- a/angular17-main/src/app/crear-servicio/crear-servicio.component.html
+++ b/angular17-main/src/app/crear-servicio/crear-servicio.component.html
@@ -7,18 +7,19 @@
         </div>
         <div class="form-group">
             <label class="form-label" for="nombre">Nombre</label>
-            <input class="form-control" id="nombre" name="nombre" type="text" [(ngModel)]="nombre" />
+            <input class="custom-input-field" id="nombre" name="nombre" type="text" [(ngModel)]="nombre" />
         </div>
         <div class="form-group">
-            <label class="form-label" for="descripcion">Descripcion</label>
-            <textarea class="form-control" id="descripcion" name="descripcion" [(ngModel)]="descripcion" rows="4" cols="50"></textarea>
+            <label class="form-label" for="descripcion">Descripción</label>
+            <textarea class="custom-input-field" id="descripcion" name="descripcion" [(ngModel)]="descripcion" rows="4" cols="50"></textarea>
         </div>
         <div class="form-group">
             <label class="form-label" for="precio">Precio</label>
-            <input type="number" class="form-control" id="precio" name="precio" type="precio" [(ngModel)]="precio" />
+            <input type="number" class="custom-input-field" id="precio" name="precio" [(ngModel)]="precio" />
         </div>
-        <div class="mt-3">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+        <div class="mt-3 d-flex justify-content-center">
+            <button type="submit" class="custom-btn">Enviar</button>
         </div>
     </form>
 </div>
+
