--- a/angular17-main/src/app/editar-resenia/editar-resenia.component.html
+++ b/angular17-main/src/app/editar-resenia/editar-resenia.component.html
@@ -1,5 +1,6 @@
 
 <div class="form-container sign-up container">
+    <h1 class="text-center">Editar comentario</h1>
     <form [formGroup]="formulario" (ngSubmit)="reseniaEditar()">
         <div class="form-group">
             <label class="form-label" for="nombre">Comentario</label>
@@ -11,13 +12,9 @@
             <input type="number" class="form-control" formControlName="puntuacion" id="puntuacion" name="precio" />
         </div>
         <div class="mt-3">
-            <button type="submit" class="btn btn-primary">Enviar</button>
-            <button (click)="volver()" class="btn btn-primary">Volver</button>
-
-
+            <button type="submit" class="btn btn-primary me-2">Enviar</button>
+            <button (click)="volver()" class="btn btn-secondary">Volver</button>
         </div>
     </form>
 </div>
-
-
 
