--- a/angular17-main/src/app/lista-servicios/lista-servicios.component.html
+++ b/angular17-main/src/app/lista-servicios/lista-servicios.component.html
@@ -1,3 +1,11 @@
+@if(loading){
+  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+  }
+
 <div class="container mt-5">
   <h1>Servicios Disponibles</h1>
   
