--- a/angular17-main/src/app/registro/registro.component.html
+++ b/angular17-main/src/app/registro/registro.component.html
@@ -1,29 +1,37 @@
-<div class="form-container sign-up container">
-    <form (ngSubmit)="registroFormulario()">
-        <h1>Registro</h1>
-        <div class="form-group">
-            <label class="form-label" for="username">Username</label>
-            <input class="form-control" id="username" name="username" type="text" [(ngModel)]="username" />
+<div class="registration-form">
+    <div class="form-container sign-up container">
+        <form (ngSubmit)="registroFormulario()">
+            <div class="form-icon">
+                <span>🔒</span>
+            </div>
+            <h1>Registro</h1>
+            <div class="form-group">
+                <label class="form-label" for="username">Username</label>
+                <input class="form-control item" id="username" name="username" type="text" [(ngModel)]="username" />
+            </div>
+            <div class="form-group">
+                <label class="form-label" for="email">Email</label>
+                <input class="form-control item" id="email" name="email" type="email" [(ngModel)]="email" />
+            </div>
+            <div class="form-group">
+                <label class="form-label" for="password1">Contraseña</label>
+                <input class="form-control item" id="password1" name="password1" type="password" [(ngModel)]="contrasenia1" />
+            </div>
+            <div class="form-group">
+                <label class="form-label" for="password2">Confirmar contraseña</label>
+                <input class="form-control item" id="password2" name="password2" type="password" [(ngModel)]="contrasenia2" />
+            </div>
+            <div class="mt-3 d-flex justify-content-center align-items-center">
+                <button class="boton-gen create-account" type="submit">
+                    <span>Enviar</span>
+                </button>
+            </div>
+            
+        </form>
+        <div class="social-media">
+            <div>
+                <p>¿Ya estás registrado? <a routerLink="/login">Inicia Sesión</a></p>
+            </div>
         </div>
-        <div class="form-group">
-            <label class="form-label" for="email">Email</label>
-            <input class="form-control" id="email" name="email" type="email" [(ngModel)]="email" />
-        </div>
-        <div class="form-group">
-            <label class="form-label" for="password1">Contraseña</label>
-            <input class="form-control" id="password1" name="password1" type="password" [(ngModel)]="contrasenia1" />
-        </div>
-        <div class="form-group">
-            <label class="form-label" for="password2">Confirmar contraseña</label>
-            <input class="form-control" id="password2" name="password2" type="password" [(ngModel)]="contrasenia2" />
-        </div>
-        <div class="mt-3 d-flex justify-content-center align-items-center">
-            <button class="boton-gen" type="submit">
-                <span>Enviar</span>
-            </button>
-        </div>
-        <div>
-            <p>¿Ya estás registrado? <a routerLink="/login">Inicia Sesión</a></p>
-        </div>
-    </form>
-</div>
+    </div>
+</div>  
