--- a/angular17-main/src/app/pago/pago.component.scss
+++ b/angular17-main/src/app/pago/pago.component.scss
@@ -75,6 +75,7 @@ body {
   border: 1px solid #17795E;
   background-color: #209978;
   overflow: hidden;
+  margin: 10px;
 }
 
 .button, .button__icon, .button__text {
