--- a/angular17-main/src/app/lista-comentarios-usuario/lista-comentarios-usuario.component.html
+++ b/angular17-main/src/app/lista-comentarios-usuario/lista-comentarios-usuario.component.html
@@ -1,3 +1,12 @@
+@if(loading){
+    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+    }
+
+
 <div class="container">
     <h1 class="text-center">Mis Comentarios</h1>
     <hr>
