--- a/angular17-main/src/app/pago/pago.component.html
+++ b/angular17-main/src/app/pago/pago.component.html
@@ -1,3 +1,11 @@
+@if(loading){
+  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+  }
+
 <div *ngIf="pago">
     
   <h1 class="text-center">¡Muchas gracias por realizar su pedido nº {{ pago.pedido.id }}!</h1>
