--- a/angular17-main/src/app/editar-servicio/editar-servicio.component.html
+++ b/angular17-main/src/app/editar-servicio/editar-servicio.component.html
@@ -1,6 +1,6 @@
 <div class="form-container sign-up container">
     <form [formGroup]="formulario" (ngSubmit)="servicioEditar()">
-        <h1>Crear Servicio</h1>
+        <h1>Editar Servicio</h1>
         <div class="form-group">
             <label class="form-label" for="nombre">Nombre</label>
             <input class="form-control" formControlName="nombre" id="nombre" name="nombre" type="text" />
