--- a/angular17-main/src/app/footer/footer.component.html
+++ b/angular17-main/src/app/footer/footer.component.html
@@ -50,7 +50,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0,
     0.05);">
-    © 2024 Copyright: <p class="text-body">XPO Marketing</p>
+    © 2024 Copyright: <p class="text-body">Digital South</p>
     </div>
     <!-- Copyright -->
     </footer>
